--- a/crafted_volts/Cargo.toml
+++ b/crafted_volts/Cargo.toml
@@ -28,6 +28,7 @@ embassy-rp = { version = "0.2.0", path = "../../embassy/embassy-rp", features = 
 embassy-time = { version = "0.3.2", path = "../../embassy/embassy-time", features = ["defmt"] }
 embassy-sync = { version = "0.6.1", features = ["defmt"] }
 embassy-executor = { version = "0.6.3", path = "../../embassy/embassy-executor", features = ["defmt", "task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
+embassy-futures = "0.1.1"
 
 [[bin]]
 name = "crafted_volts"
